# waybar-google-calendar

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: lint.yml  publish-aur.yml
assets/themes/: apple-light.css
docs/: google-oauth.md
examples/: custom-theme.css  waybar-clock.json
packaging/aur/: .gitignore  PKGBUILD  README.md
packaging/aur-bin/: .gitignore  PKGBUILD  README.md
src/: agenda.rs  app.rs  auth_ui.rs  cache.rs  cli.rs  date.rs  google.rs  gws.rs  i18n.rs  main.rs  model.rs  month.rs  paths.rs  single_instance.rs  test_env.rs  theme.rs
src/agenda/: auth_prompt.rs  controller.rs  settings.rs  view.rs
src/agenda/auth_prompt/: form.rs  pages.rs  status.rs  widgets.rs
src/agenda/settings/: account.rs  appearance.rs  calendar.rs  footer.rs  language.rs  layout.rs  mod.rs
src/agenda/view/: calendar.rs  cards.rs  editor.rs  list.rs  status.rs
src/agenda/view/list/: timeline.rs
src/app/: cli.rs  single_instance.rs
src/auth_ui/: mod.rs
src/calendar/: date.rs  mod.rs  model.rs  view.rs
src/google/: api.rs  auth.rs  mod.rs  transport.rs  types.rs
src/i18n/: calendar.rs  messages.rs  mod.rs
src/month/: mod.rs
src/storage/: cache.rs  mod.rs  paths.rs  settings.rs
src/ui/: mod.rs  pickers.rs  theme.rs  widgets.rs
