[package]
name = "waybar-google-calendar"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "GTK4 Google Calendar popup for Waybar"
repository = "https://github.com/pufanyi/waybar-google-calendar"
readme = "README.md"
keywords = ["waybar", "calendar", "gtk4", "google-calendar"]
categories = ["gui", "date-and-time"]

[[bin]]
name = "waybar-gcal"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_18"] }
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_6", "gtk_v4_18"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wait-timeout = "0.2.1"
