[package]
name = "waybar-google-calendar"
version = "0.0.3"
edition = "2024"
license = "GPL-3.0-only"
description = "GTK4 Google Calendar popup for Waybar"
repository = "https://github.com/pufanyi/waybar-google-calendar"
readme = "README.md"
keywords = ["waybar", "calendar", "gtk4", "google-calendar"]
categories = ["gui", "date-and-time"]

[[bin]]
name = "waybar-gcal"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10.4"
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_18"] }
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_6", "gtk_v4_18"] }
libc = "0.2"
percent-encoding = "2.3.2"
relm4 = { version = "0.11.0", default-features = false }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
yup-oauth2 = "12.1.2"
